imagen tarea extra

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <output type="text" id="climaHoyManana"> </output><br>
             <output type="text" id="climaHoyTarde"> </output><br>
             <output type="text" id="climaHoyNoche"> </output><br>
+            <div></div><div id="imagen"></div>
         </form>
+        
     </body>
     <script type="text/javascript" src="index.js"></script>
 </html>
